# iiif-downloader

./: .gitignore  .pre-commit-config.yaml  README.md  iiif-downloader.py  iiif-downloader.spec  pixi.toml  pyproject.toml
.cursor/rules/: python.mdc
.github/: README.md
.github/workflows/: build-matrix.yml  build-release.yml  ci.yml
scripts/: create-release.sh
src/iiif_downloader/: __init__.py  auth_detector.py  cli.py  constants.py  download_engine.py  download_helpers.py  downloader.py  file_tracker.py  image_downloader.py  main.py  manifest.py  metadata.py  progress_columns.py  rate_limiter.py  server_capabilities.py  session_manager.py
src/iiif_downloader/tui/: __init__.py  app.py  downloader_tui.py  themes.py  widgets.py
