[project]
authors = [{name = "conradolandia", email = "andresconrado@gmail.com"}]
dependencies = []
name = "iiif-downloader"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
iiif_downloader = { path = ".", editable = true }

[tool.pixi.tasks]
